tests/ui/traits/issue-33140-hack-boundaries.stderr
error[E0119]: conflicting implementations of trait `Trait1` for type `(dyn Send + 'static)`
  --> $DIR/issue-33140-hack-boundaries.rs:18:1
   |
LL | impl Trait1 for dyn Send {}
   | ------------------------ first implementation here
LL | impl Trait1 for dyn Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Send + 'static)`

error[E0751]: found both positive and negative implementation of trait `Trait2` for type `(dyn Send + 'static)`:
  --> $DIR/issue-33140-hack-boundaries.rs:25:1
   |
LL | impl Trait2 for dyn Send {}
   | ------------------------ positive implementation here
LL | impl !Trait2 for dyn Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ negative implementation here

error[E0119]: conflicting implementations of trait `Trait3<(dyn Sync + 'static)>` for type `(dyn Send + 'static)`
  --> $DIR/issue-33140-hack-boundaries.rs:32:1
   |
LL | impl Trait3<dyn Sync> for dyn Send {}
   | ---------------------------------- first implementation here
LL | impl Trait3<dyn Sync> for dyn Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Send + 'static)`

error[E0119]: conflicting implementations of trait `Trait4a` for type `(dyn Send + 'static)`
  --> $DIR/issue-33140-hack-boundaries.rs:39:1
   |
LL | impl<T: ?Sized> Trait4a for T {}
   | ----------------------------- first implementation here
LL | impl Trait4a for dyn Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Send + 'static)`

error[E0119]: conflicting implementations of trait `Trait4b` for type `()`
  --> $DIR/issue-33140-hack-boundaries.rs:46:1
   |
LL | impl Trait4b for () {}
   | ------------------- first implementation here
LL | impl Trait4b for () {}
   | ^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`

error[E0119]: conflicting implementations of trait `Trait4c` for type `(dyn Trait1 + Send + 'static)`
  --> $DIR/issue-33140-hack-boundaries.rs:53:1
   |
LL | impl Trait4c for dyn Trait1 + Send {}
   | ---------------------------------- first implementation here
LL | impl Trait4c for dyn Trait1 + Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Trait1 + Send + 'static)`

error[E0119]: conflicting implementations of trait `Trait4d` for type `dyn Send`
  --> $DIR/issue-33140-hack-boundaries.rs:60:1
   |
LL | impl<'a> Trait4d for dyn Send + 'a {}
   | ---------------------------------- first implementation here
LL | impl<'a> Trait4d for dyn Send + 'a {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `dyn Send`

error[E0119]: conflicting implementations of trait `Trait5` for type `(dyn Send + 'static)`
  --> $DIR/issue-33140-hack-boundaries.rs:67:1
   |
LL | impl Trait5 for dyn Send {}
   | ------------------------ first implementation here
LL | impl Trait5 for dyn Send where u32: Copy {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Send + 'static)`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0119, E0751.
For more information about an error, try `rustc --explain E0119`.
Future incompatibility report: Future breakage diagnostic:
warning: conflicting implementations of trait `Trait0` for type `(dyn Send + 'static)`: (E0119)
  --> $DIR/issue-33140-hack-boundaries.rs:10:1
   |
LL | impl Trait0 for dyn Send {}
   | ------------------------ first implementation here
LL | impl Trait0 for dyn Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Send + 'static)`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56484 <https://github.com/rust-lang/rust/issues/56484>
note: the lint level is defined here
  --> $DIR/issue-33140-hack-boundaries.rs:2:10
   |
LL | #![allow(order_dependent_trait_objects)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

